# techno-terminal

./: .cursorrules  .dockerignore  .env.example  .env.test  .gitignore  AGENTS.md  Dockerfile  Feature.md  Implementing Payment Void And Refund.md  README.md  apply_migration.py  audit_dashboard.py  audit_output.txt  audit_templates.py  backend_student_grouping_request.md  check_schema.py  db-audit-report.md  deleting group discussion.md  dump_routes.py  features_checklist.html  features_checklist.md  generate_markdown.py  gunicorn.conf.py  implement-balance-get-endpoints-8a2f4a.md  notifecation_serveice_task_list.md  openapi.json  pyproject.toml  railpack.json  refactor_phase2.py  refund amd payment discussion.md  rename_script.py  render.yaml  requirements.txt  run_api.py  run_app.py  run_migration.py  run_migration_067.py  run_migration_068.py  run_migration_069.py  run_ui.py  (+5 more)
.specify/: feature.json  init-options.json  integration.json
.streamlit/: config.toml
alembic/: env.py
dashboard/: __init__.py  config.py  page_audit.py  page_bi.py  page_finance.py  pdf_generator.py  ui_components.py
db/: README.md  schema.sql
docs/: API_CHANGES_2026_04.md  DESIGN_SYSTEM.md  MEMORY_BANK.md  README.md  UI_Service_Dependencies.md  auth-api.md  competitions-api.md  docs_organization_plan.md  notification-architecture-redesign-f3f831.md  notification-architecture.md  student_payments.md
implementing tasks feature/: implementing tasks feature.md  task.md
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
(+1390 files in other folders)
